--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,3 +9,18 @@ body{
     align-items: center;
     flex-direction: column;
 }
+
+
+.image{
+    width: 370px;
+}
+
+@media (max-width:770px){
+    .container{
+        margin: 0 10%
+    }
+
+    .image{
+        width:100%;
+    }
+}
